# Patterns

./: CMakeLists.txt  story.odt
data/: (1) The Hunger Games copy.txt  data.txt
include/: matrix.hpp  neuralNetwork.hpp  pattern.hpp
src/: main.cpp  matrix.cpp  neuralNetwork.cpp  pattern.cpp
